# ChangeLog for media-video/get_flash_videos
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/get_flash_videos/ChangeLog,v 1.3 2010/08/03 19:55:10 hwoarang Exp $

  03 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  get_flash_videos-1.23.ebuild:
  Remove utils.t test wrt bug #330409. Thanks to Olivier Huber
  <oli.huber@gmail.com> for reporting

*get_flash_videos-1.23 (29 Jul 2010)

  29 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  +get_flash_videos-1.23.ebuild:
  Version bump

*get_flash_videos-1.21 (11 Jul 2010)

  11 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  +get_flash_videos-1.21.ebuild, +metadata.xml:
  Initial commit of get_flash_videos application. Fixes bug #318929. Thanks
  to Maxime de Roucy <maxime.deroucy@gmail.com> for the ebuild
