@@ -1,13 +1,13 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/get_flash_videos/Attic/get_flash_videos-1.23.ebuild,v 1.2 2010/08/03 19:55:10 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/get_flash_videos/get_flash_videos-1.23-r1.ebuild,v 1.1 2010/08/20 22:27:37 hwoarang Exp $
 
 EAPI=2
 inherit perl-module
 
 DESCRIPTION="Downloads videos from various Flash-based video hosting sites"
 HOMEPAGE="http://code.google.com/p/get-flash-videos/"
-SRC_URI="http://omploader.org/vNGdjYQ/${P}.tar.gz"
+SRC_URI="http://github.com/monsieurvideo/get-flash-videos/tarball/v1.23 -> ${P}.tar.gz"
 
 LICENSE="Apache-2.0"
 SLOT="0"
@@ -15,7 +15,8 @@ KEYWORDS="~amd64 ~x86"
 IUSE="test"
 
 RDEPEND="dev-perl/WWW-Mechanize
-	perl-core/Module-CoreList"
+	perl-core/Module-CoreList
+	dev-perl/HTML-TokeParser-Simple"
 DEPEND="${RDEPEND}
 	dev-perl/UNIVERSAL-require
 	test? ( media-video/rtmpdump
@@ -25,7 +26,9 @@ DEPEND="${RDEPEND}
 		dev-perl/Data-AMF
 		perl-core/IO-Compress )"
 
-S="${WORKDIR}/${PN//_/-}"
+SRC_TEST="do"
+
+S="${WORKDIR}/monsieurvideo-get-flash-videos-1690b88"
 SRC_TEST="do"
 mymake="default ${PN}.1"
 myinst="DESTDIR=${D}"
