@@ -1,6 +1,13 @@
 # ChangeLog for media-video/get_flash_videos
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/get_flash_videos/ChangeLog,v 1.3 2010/08/03 19:55:10 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/get_flash_videos/ChangeLog,v 1.4 2010/08/20 22:27:37 hwoarang Exp $
+
+*get_flash_videos-1.23-r1 (20 Aug 2010)
+
+  20 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
+  -get_flash_videos-1.21.ebuild, -get_flash_videos-1.23.ebuild,
+  +get_flash_videos-1.23-r1.ebuild:
+  Fix SRC_URI. Bug #333707
 
   03 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
   get_flash_videos-1.23.ebuild:
